@@ -5,6 +5,7 @@ This file documents the revision history for UFL::Phonebook.
           ::BaseController
         - Disallow searches when SASL is configured but no Catalyst
           user is found
+        - Rely more on $ENV{KRB5CCNAME} instead of trying to fake it
 
 0.22  Fri Oct 19 12:51:11 EDT 2007
         - Say "Not Available" instead of "Unknown" for search results
